--- a/css/admin_css/admin_Pos.css
+++ b/css/admin_css/admin_Pos.css
@@ -11,18 +11,16 @@ body{
       flex-direction: column;
     }
     .btn-toolbar{
-    display: grid;
     margin-left: 0 !important;
     }
     #datatable_length{
     display:revert !important;
     }
     .dataTables_info{
-    display:block !important;
+      float: none !important;
+      text-align: center !important;
     }
-    #datatable_paginate{
-    display:grid;
-    }
+    div#datatable_paginate.dataTables_paginate.paging_simple_numbers{display: flex;justify-content: center;}
     .modal-footer{
     text-align: center !important;
     }
@@ -49,10 +47,11 @@ body{
     display:revert !important;
     }
     .dataTables_info{
-    display:block !important;
+      float: none !important;
+      text-align: center !important;
     }
-    #datatable_paginate{
-    display:grid;
+    div#datatable_paginate.dataTables_paginate.paging_simple_numbers{
+
     }
     .modal-footer{
     text-align: center !important;
@@ -89,10 +88,11 @@ body{
     display:revert !important;
     }
     .dataTables_info{
-    display:block !important;
+      float: none !important;
+      text-align: center !important;
     }
-    #datatable_paginate{
-    display:grid;
+    div#datatable_paginate.dataTables_paginate.paging_simple_numbers{
+
     }
     .modal-footer{
     text-align: center !important;
@@ -123,9 +123,8 @@ body{
     float: right;
     }
     #datatable_paginate{
-    float: right;
-    text-align: right;
-    margin-top: 25px;
+    display: flex;
+    justify-content: center;
     }
     .img-container{
      overflow:hidden;
@@ -152,7 +151,6 @@ body{
     #datatable_paginate{
     float: right;
     text-align: right;
-    margin-top: 25px;
     }
     .img-container{
      overflow:hidden;
@@ -160,6 +158,10 @@ body{
     }
     div.cropper-container.cropper-bg{
     width:auto !important;
+    }
+    .dataTables_wrapper .dataTables_info{
+          float: none;
+          text-align: center;
     }
   }
   @media only screen and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
@@ -413,7 +415,7 @@ body{
 
   #datatable td {
     border: 1px solid #124254;
-    padding: 3px;
+    /* padding: 3px; */
     max-width: 150px;
     height: 40px;
     overflow: hidden;
@@ -533,21 +535,6 @@ body{
     height: 100%;
     font-family: 'genericaregular', sans-serif
   }
-  .right {
-    width: 100%;
-    height: 100%;
-    float: left;
-  }
-  .dataTables_info {
-  margin-top: 25px;
-  display: inline-block;
-  }
-  .padThisCell {
-    text-align: center;
-    padding: 10px 15px 10px;
-    width: 50%;
-    word-break: break-all;
-  }
   .padNotThisCell {
     text-align: center;
     padding: 0;
@@ -654,10 +641,6 @@ body{
     display: block;
     font-size: 4.5rem;
   }
-  /*End of Landing Page*/
-  .dataTables_filter {
-    float: right;
-  }
   .pagination {
     float: right;
   }
@@ -707,6 +690,7 @@ body{
     line-height: 40px;
     margin-bottom: 20px;
     text-align: center;
+      border: 1px solid;
   }
   #l .list-group-item .list-group-action-border-1 {
     margin-top: 0 !important;
@@ -818,11 +802,6 @@ body{
     margin-bottom: 20px;
   }
   .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
-    cursor: default;
-    color: #777777;
-    border: 1px solid transparent;
-    background: transparent;
-    box-shadow: none;
   }
   .dataTables_wrapper .dataTables_length select option {
     color: black;
@@ -892,13 +871,6 @@ body{
     background-color: white !important;
     color: #333 !important;
   }
-  .dataTables_wrapper .dataTables_filter input {
-    background-color: white !important;
-  }
-  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper {
-    color: #333 important;
-    font-size: 15px;
-  }
   .table-responsive::-webkit-scrollbar {
     display: none;
   }
@@ -909,7 +881,6 @@ body{
     padding: 5px;
     margin-left: 3px;
   }
-
 .inp_label{
   position: absolute;
   z-index: -1;
@@ -919,7 +890,6 @@ body{
 }
 .button-wrap{
     position: relative;
-    margin-left: 22.5px;
 }
 label.button{
   display: inline-block;
@@ -961,20 +931,11 @@ input[type="file"] {
 .dataTables_length label, option {
   font-family: 'Roboto-regular', sans-serif !important;
 }
-#datatable_filter.dataTables_filter label{
-  font-family: 'Roboto-regular', sans-serif !important;
-}
 #datatable_info.dataTables_info {
   font-family: 'Roboto-regular', sans-serif !important;
 }
 .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active, .paginate_button  {
     font-family: 'Roboto-regular', sans-serif !important;
-}
-.paginate_button.next{
-      font-family: 'Roboto-regular', sans-serif !important;
-}
-.dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
-   font-family: 'Roboto-regular', sans-serif !important;
 }
 #add_button.btn.btn-button1.btn-s{
 margin-left:5px !important;
@@ -993,10 +954,6 @@ margin-left:5px !important;
 }
 .paginate_button .current{
   background-color: #124254 !important;
-}
-.paginate_button{
-  color:#337ab7;
-  padding: .5em 1em;
 }
 #add_button:hover, #defaultButton:hover, #add-candidate:hover{
   color: #333 !important;
@@ -1049,21 +1006,9 @@ background-color:#D3D3D3
 #datatable tbody tr{
 background-color: rgb(236, 239, 240);
 }
-.paginate_button.disabled{
-    color: #777777;
-    cursor: not-allowed !important;
-    border-color: #ddd;
-}
 #datatable_length{
   margin-left: 20px;
   display: contents;
-}
-div.dataTables_paginate{
-    margin: 0;
-    white-space: nowrap;
-    text-align: right;
-    float: right;
-    margin-top: 25px;
 }
 a.paginate_button{
       position: relative;
@@ -1083,11 +1028,6 @@ a.paginate_button{
     border-color: #ddd;
     text-decoration: none !important;
   }
-.paginate_button.current{
-      background-color: #124254 !important;
-      color: white;
-      background: #124254 !important;
-}
 .paginate_button:hover{
       color: #23527c;
 }
@@ -1695,152 +1635,16 @@ body{
     float: left;
   }
 
-
-  .dataTables_info {
-  margin-top: 25px;
-  display: inline-block;
-  }
-
   .padThisCell {
     text-align: center;
     padding: 10px 15px 10px;
     width: 50%;
     word-break: break-all;
   }
-
-  .padNotThisCell {
-    text-align: center;
-    padding: 0;
-    word-break: break-all;
-  }
-
-  /*Styles for landing page*/
-
-  div p.elec-guide-txt {
-    font-family: 'Roboto-regular', sans-serif;
-    text-align: justify;
-    font-size: 1.6em;
-    margin-top: 1em;
-    margin-bottom: 0;
-    float: right;
-  }
-
-  /*For landing page stuff*/
-
-  .CM_container {
-    float: right;
-    text-align: center;
-    margin: 80px 50px 50px;
-    position: relative;
-    max-width: 500px;
-    height: auto;
-  }
-
-  #CM .Landing_left {
-    margin-top: 20px;
-    padding: 10px 20px;
-    color: white;
-    background-color: #124254;
-    border-radius: 4px;
-    position: absolute;
-    left: 50px;
-    display: inline-flex;
-    text-decoration: none !important
-  }
-
-  #CM a {
-    font-size: 20px;
-  }
-
-  #CM .Landing_right {
-    margin-top: 20px;
-    padding: 10px 15px;
-    color: white;
-    background-color: #124254;
-    border-radius: 4px;
-    position: absolute;
-    right: 50px;
-    display: inline-flex;
-    text-decoration: none !important;
-    font-size: 20px;
-  }
-
-  #CM .Landing_left:hover {
-    color: #ffc423;
-  }
-
-  #CM .Landing_right:hover {
-    color: #ffc423;
-  }
-
-  .logo-container {
-    position: relative;
-    /* float: left; */
-    display: -webkit-flex;
-    display: flex;
-    max-width: 700px;
-  }
-
-  article {
-    -webkit-flex: 3;
-    -ms-flex: 3;
-    flex: 3;
-    padding: 10px;
-  }
-
-  section {
-    display: -webkit-flex;
-    display: flex;
-    margin-left: 30px;
-    margin-top: 100px;
-    float: left;
-  }
-
-  article p {
-    font-family: 'Roboto-regular', sans-serif;
-    color: white;
-    font-weight: inherit;
-    font-size: 20px;
-    letter-spacing: 3px;
-    position: relative;
-  }
-
-  article h2 {
-    font-family: 'genericaregular', sans-serif;
-    color: white;
-  }
-
-  #CM div ul {
-    /* max-width: 90%; */
-    border: 1px solid #ffc423;
-    border-width: 3px;
-    text-align: center;
-    padding-bottom: 35px;
-  }
-
-  div li {
-    display: inline-block;
-    font-size: 1.5em;
-    list-style-type: none;
-    padding: 5%;
-    text-transform: uppercase;
-    color: #ffffff;
-  }
-
-  div li span {
-    display: block;
-    font-size: 4.5rem;
-  }
-
-  /*End of Landing Page*/
-
   .dataTables_filter {
     float: right;
   }
 
-  .pagination {
-    float: right;
-  }
 
   #show-list {
     position: absolute;
@@ -2022,20 +1826,9 @@ body{
     margin-top: 10px;
     margin-bottom: 20px;
   }
-
-  .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover, .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:active {
-    cursor: default;
-    color: #777777;
-    border: 1px solid transparent;
-    background: transparent;
-    box-shadow: none;
-  }
-
   .dataTables_wrapper .dataTables_length select option {
     color: black;
   }
-
-
   .switch {
     position: relative;
     display: inline-block;
@@ -2112,10 +1905,6 @@ body{
     background-color: white !important;
   }
 
-  .dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper {
-    font-size: 15px;
-  }
-
   .table-responsive::-webkit-scrollbar {
     display: none;
   }
@@ -2138,10 +1927,6 @@ body{
   font-size: 13px;
 
 }
-
-.button-wrap{
-    position: relative;
-    margin-left: 22.5px;
 }
 
 label.button{
@@ -2198,11 +1983,9 @@ input[type="file"] {
 .paginate_button.next{
       font-family: 'Roboto-regular', sans-serif !important;
 }
-
 .dataTables_wrapper .dataTables_paginate .paginate_button.current, .dataTables_wrapper .dataTables_paginate .paginate_button.current:hover{
    font-family: 'Roboto-regular', sans-serif !important;
 }
-
 #add_button.btn.btn-button1.btn-s{
 margin-left:5px !important;
 }
@@ -2215,22 +1998,14 @@ margin-left:5px !important;
 .modal-header{
   font-family: 'Roboto-regular', sans-serif !important; 
 }
-
 .datatables_paginate{
   margin-top: 25px !important;
   background-color: #EEEEEE !important;
   border: 1px solid #ddd !important;
 }
-
 .paginate_button .current{
   background-color: #124254 !important;
 }
-
-.paginate_button{
-  color:#337ab7;
-  padding: .5em 1em;
-}
-
 #add_button:hover, #defaultButton:hover, #add-candidate:hover{
   color: #333 !important;
   background-color: #ffc324 !important;
@@ -2265,22 +2040,7 @@ margin-left: 3px;
     width: 100%;
   }
 
-.tTip .tooltiptext {
-  visibility: hidden; 
-  background-color:black;
-  color: white;
-  padding: 5px 0;
-  border-radius: 6px;
-  margin-bottom: 90px;
-  bottom: 90%;
-  left: 0%;
-  z-index:1;
-  position: absolute;
-  font-size: .5em;
-  width: auto;
-  height: auto;
-  margin-left: 13px;
-}
+
 
 .tTip:hover .tooltiptext {
   visibility: visible;
@@ -2317,28 +2077,13 @@ background-color: rgb(236, 239, 240);
 
 
 .paginate_button.disabled{
-    color: #777777;
     cursor: not-allowed !important;
-    border-color: #ddd;
 }
 
 
 #datatable_length{
   margin-left: 20px;
   display: contents;
-}
-
-
-a.paginate_button{
-      position: relative;
-      float: left;
-      padding: 6px 12px;
-      margin-left: -1px;
-      line-height: 1.42857143;
-      color: #337ab7;
-      text-decoration: none;
-      background-color: #EEEEEE !important;
-      border: 1px solid #ddd;
 }
 
 .paginate_button:hover{
@@ -2405,6 +2150,13 @@ background-color: #124254 !important;
     box-shadow: 1px 1px 1px #888888;
 }
 
-table.dataTable thead th, table.dataTable thead td{
-  padding:0 !important;
+table.dataTable thead>tr>th{
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+div.dataTables_wrapper div.dataTables_paginate {
+    margin: 0;
+    white-space: nowrap;
+    text-align: right;
 }
