--- a/css/admin_css/style1_addAdmin.css
+++ b/css/admin_css/style1_addAdmin.css
@@ -96,6 +96,10 @@ body {
   div.cropper-container.cropper-bg{
     width:auto !important;
     }
+  .btn-cancelcrop {
+    width: 17% !important;
+    margin: 20px 15px 10px 0px!important;
+  }
 }
 
 #Dheader{
