changed generica to roboto

--- a/css/student_css/user_Cand.css
+++ b/css/student_css/user_Cand.css
@@ -397,7 +397,7 @@ footer {
 
 #profile p {
   font-size: 14px;
-  font-family: Generica Thin, sans-serif;
+  font-family: 'roboto-regular', sans-serif;
 }
 
 #profile button {
