text-align edit student vote results

--- a/css/student_css/style_monitor.css
+++ b/css/student_css/style_monitor.css
@@ -903,6 +903,7 @@ body {
     margin-top: 10%;
     font-family: 'Roboto-regular', sans-serif;
     padding: 4px;
+    text-align: center;
   }
   .Bcan b{
     color: white;
@@ -954,6 +955,7 @@ body {
     margin-top: 10%;
     font-family: 'Roboto-regular', sans-serif;
     padding: 4px;
+    text-align: center;
   }
   .Bcan b{
     color: white;
@@ -1240,6 +1242,7 @@ body {
     margin-top: 10%;
     font-family: 'Roboto-regular', sans-serif;
     padding: 4px;
+    text-align: center;
   }
   .Bcan b{
     color: white;
